# monorepo_example

./: .env.example  README.md  docker-compose.yml
ansible/: ansible.cfg  initial_setup.yml  inventory  requirements.yml
ansible/group_vars/nginx_static/: vars.yml  vault
ansible/roles/docker_install/tasks/: main.yml
ansible/roles/nginx_install/files/: default_81  default_82
ansible/roles/nginx_install/handlers/: main.yml
ansible/roles/nginx_install/tasks/: main.yml
back/: Dockerfile.backend  pyproject.toml
back/src/: config.py  main.py
nginx/: Dockerfile.nginx  nginx.conf
